removed padding on top bar that caused spacing issue

--- a/assets/styles/_home.scss
+++ b/assets/styles/_home.scss
@@ -17,7 +17,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 10px;
+    // padding: 0 10px;
     div:nth-child(2) h2 {
       color: $ivory;
     }
